# lazydb

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yaml
docker/clickhouse/: init.sql
docs/: book.toml
docs/book/: 404.html  cli.html  configuration.html  configuration.md#connection-profiles  faq.html  index.html  keybindings.html  leader.html  leader.md#leader-actions-by-pane  leader.md#quick-pane-toggles  panels.html  panels.md#recent-queries  print.html  searcher-c2a407aa.js  searchindex-0dd2a359.js  toc-d45d89d2.js  toc.html  vim-editor.html  vim-editor.md#entering-insert-mode  vim-editor.md#moving-the-cursor
docs/src/: SUMMARY.md  cli.md  configuration.md  configuration.md#application-config  faq.md  getting-started.md  keybindings.md  leader.md  panels.md  panels.md#connections-sidebar  panels.md#query-editor  vim-editor.md
docs/theme/css/: theme.css
nvim-lazydb/lua/lazydb/: config.lua  init.lua
nvim-lazydb/plugin/: lazydb.lua
src/: app.rs  cli.rs  completion.rs  files.rs  highlight.rs  keybindings.rs  main.rs  recents.rs  schema_cache.rs  tree.rs  vim.rs
src/config/: mod.rs
src/db/: clickhouse_backend.rs  databricks_backend.rs  duckdb_backend.rs  mod.rs  postgres_backend.rs  snowflake_backend.rs
src/ui/: completion_popup.rs  editor.rs  files.rs  help.rs  leader.rs  loading.rs  message.rs  mod.rs  recent.rs  results.rs  sidebar.rs  sql_preview.rs  status_bar.rs
