[package]
name = "lazydb"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
tui-textarea = "0.7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
duckdb = { version = "1", features = ["bundled"] }
postgres = "0.19"
ureq = "3"
serde_json = "1"
sqlformat = "0.5"
prqlc = { version = "0.13.12", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
